[package]
name = "order-pdf-printer"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.40"
#itext = { version = "0.1.0", features = ["bundled"] }
itext = { path = "/home/tobias/projects/mrfriendly/itext-rs", features = ["bundled"] }
tracing-slf4j = "0.1.0"
jni = { version = "0.21.1", features = ["invocation"] }
tempfile = "3.6.0"
colors-transform = "0.2.11"

[dev-dependencies]
color-eyre = "0.6.2"
